--- a/.github/workflows/build-openwrt-k2-shh.yml
+++ b/.github/workflows/build-openwrt-k2-shh.yml
@@ -56,6 +56,7 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
+        sudo -E apt-get install libc6:i386 libgcc1:i386 libstdc++5:i386 libstdc++6:i386
 
     - name: Clone source code
       working-directory: /workdir
